@@ -1,0 +1,21 @@
+#
+# Copyright (c) 2005-2008 rPath, Inc.
+#
+# All rights reserved
+#
+
+SUBDIRS = web
+
+python_files = __init__.py
+
+kid_files = index.kid
+
+
+all: kid-build default-all
+
+install: raaplugins-install default-install
+
+clean: kid-clean default-clean
+
+
+include ../../../Make.rules
