@@ -1,0 +1,18 @@
+#
+# Copyright (c) 2005-2007 rPath, Inc.
+#
+# All rights reserved
+#
+
+SUBDIRS =
+
+python_files = __init__.py eula.py
+
+all: default-all
+
+install: raaplugins-install default-install
+
+clean: default-clean
+
+
+include ../../../../Make.rules
