@@ -1,0 +1,5 @@
+#
+# Copyright (c) 2005-2007 rPath, Inc.
+#
+# All rights reserved
+#
